--- a/todo-app/todo-ui/src/containers/addTodo/addTodo.css
+++ b/todo-app/todo-ui/src/containers/addTodo/addTodo.css
@@ -11,6 +11,11 @@ form .add-todo-actions{
 }
 
 @media screen and (min-width: 480px) {
+    form .form-inline .form-group .Select{
+        display: inline-flex;
+        width: 80%;
+    }
+
     form .form-inline .form-group .form-control{
         width: 80%;
     }
