--- a/todo-app/todo-ui/src/index.css
+++ b/todo-app/todo-ui/src/index.css
@@ -3,3 +3,11 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.form-control, .btn{
+    height: 38px;
+}
+
+.btn{
+    padding: 8px 12px;
+}
