--- a/todo-app/todo-ui/src/components/todoList/todoList.css
+++ b/todo-app/todo-ui/src/components/todoList/todoList.css
@@ -22,3 +22,16 @@ h1[data-toggle="collapse"].collapsed:before
     position: relative;
     bottom: 5px;
 }
+
+.past-due-container .todo-container .todo-item.not-done .date-container{
+    -webkit-animation-name: over-due; /* Safari 4.0 - 8.0 */
+    -webkit-animation-duration: 3s; /* Safari 4.0 - 8.0 */
+    animation-name: over-due;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+}
+
+@-webkit-keyframes over-due {
+    0% {color: darkorange; text-shadow: 0 0 1px rgba(255, 0, 0, 0.8);}
+    100% {color: red; text-shadow: 0 0 1px rgba(255, 0, 0, 1);}
+}
