--- a/todo-app/todo-ui/src/containers/search/search.css
+++ b/todo-app/todo-ui/src/containers/search/search.css
@@ -25,9 +25,26 @@
     display: inline-block;
 }
 
+.search-filter .form-control,
+.search-filter .input-group-addon,
+.filter-button{
+    border-color: #2D7FC6;
+    background-color: #ffffff;
+}
+
+.search-filter .input-group-addon,
+.filter-button{
+    color: #2D7FC6;
+
+}
+
 .filter-button{
     vertical-align: top;
     margin-left: 15px;
+}
+
+.mobile-add-todo{
+    margin-top: 15px;
 }
 
 @media (max-width: 767px) {
