--- a/todo-app/todo-ui/src/containers/heading/heading.css
+++ b/todo-app/todo-ui/src/containers/heading/heading.css
@@ -7,3 +7,12 @@
 .header h1{
     margin: 0;
 }
+
+.current-user{
+    position: absolute;
+    right: 15px;
+    z-index: 10;
+    top: 41px;
+    cursor: pointer;
+    float: right;
+}
